<resources>
    <string name="app_name">LazinessInCollege</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="bem_vindo">BEM VINDO</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="entrar">ENTRAR</string>
    <string name="acessibilidade_logo_do_aplicativo">Logo do aplicativo</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="foto">Foto</string>
    <string name="confirmar">confirmar</string>

    <string-array name="sexo">
        <item>Sexo</item>
        <item>Masculino</item>
        <item>Feminino</item>
        <item>Outros</item>
    </string-array>
</resources>
